--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,11 +2,11 @@
 
 @font-face {
 	font-family: 'themify';
-	src:url('assets/plugins/css/plugins/fonts/themify.eot?-fvbane');
-	src:url('fonts/themify.eot?#iefix-fvbane') format('embedded-opentype'),
-		url('fonts/themify.woff?-fvbane') format('woff'),
-		url('fonts/themify.ttf?-fvbane') format('truetype'),
-		url('fonts/themify.svg?-fvbane#themify') format('svg');
+	src:url('assets/plugins/css/plugins/fonts/themify.eot');
+	src:url('fonts/themify.eot') format('embedded-opentype'),
+		url('fonts/themify.woff') format('woff'),
+		url('fonts/themify.ttf') format('truetype'),
+		url('fonts/themify.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -1613,7 +1613,7 @@ border-bottom:none;
 z-index:99999;
 }
 
-nav.navbar.bootsnav ul.nav > li > a.addlist i {
+body nav.navbar.bootsnav ul.nav > li > a.addlist i {
     color:#ffb8c1;
 }
 .nav>li>a>img.avater-img {
@@ -1626,12 +1626,12 @@ nav.navbar.bootsnav ul.nav > li > a.addlist i {
     border: 2px solid rgba(255,255,255,0.5);
 }
 /*---------- Transparent Navigation ---------*/
-.home-2 nav.navbar.bootsnav.navbar-transparent {
+body.home-2 nav.navbar.bootsnav.navbar-transparent {
     background-color: transparent;
 	box-shadow:none;
     border-bottom:1px solid rgba(255,255,255,0.10);
 }
-.home-2 nav.navbar.bootsnav {
+body.home-2 nav.navbar.bootsnav {
     background-color:#ffffff;
     border-bottom:none;
 	-webkit-box-shadow:0 2px 10px 0 rgba(188,195,208,0.5);
@@ -1639,14 +1639,14 @@ nav.navbar.bootsnav ul.nav > li > a.addlist i {
 	box-shadow:0 2px 10px 0 rgba(188,195,208,0.5);
 }
 
-.home-2 nav.navbar.bootsnav.navbar-transparent ul.nav > li > a.addlist{
+body.home-2 nav.navbar.bootsnav.navbar-transparent ul.nav > li > a.addlist{
 	background:transparent;
 }
 
-.home-2 nav.navbar.bootsnav ul.nav > li > a.addlist i {
+body.home-2 nav.navbar.bootsnav ul.nav > li > a.addlist i {
     color:#ffffff;
 }
-.home-2 nav.navbar.bootsnav.no-background.white .attr-nav > ul > li > a, .home-2 nav.navbar.bootsnav.navbar-transparent.white .attr-nav > ul > li > a, .home-2 nav.navbar.bootsnav.navbar-transparent.white ul.nav > li > a, .home-2 nav.navbar.bootsnav.no-background.white ul.nav > li > a {
+body.home-2 nav.navbar.bootsnav.no-background.white .attr-nav > ul > li > a, body.home-2 nav.navbar.bootsnav.navbar-transparent.white .attr-nav > ul > li > a, body.home-2 nav.navbar.bootsnav.navbar-transparent.white ul.nav > li > a, body.home-2 nav.navbar.bootsnav.no-background.white ul.nav > li > a {
     color:#01A2DD;
     text-shadow: none;
 }
@@ -2209,25 +2209,25 @@ color:#01A2DD;
     border: 2px solid #01A2DD;
 }
 /*---------- Home 5 Banner ------------*/
-.home-2 .banner{
+body.home-2 .banner{
 	background-position:center;
 	background-attachment:fixed;
 	background-size:cover;
 }
 
-.home-2 .banner h1 {
+body.home-2 .banner h1 {
     font-size:42px;
 	opacity:1;
     margin-bottom:15px;
     padding-bottom: 0;
 }
 
-.home-2 .banner h1 span{
+body.home-2 .banner h1 span{
 	opacity:1;
 	color:#ffffff;
 }
 
-.home-2 .banner p {
+body.home-2 .banner p {
     color: #ffffff;
     opacity: 0.92;
 	margin:0 auto 15px auto;
@@ -2235,12 +2235,12 @@ color:#01A2DD;
     text-transform: capitalize;
     line-height: 1.9;
 }
-a.btn {
+body a.btn {
     padding: 10px 30px;
 	text-transform: uppercase;
 	transition:all ease 0.4s;
 }
-.home-2 a.btn i{
+body.home-2 a.btn i{
 	margin-right:10px;
 	color:#ffffff;
 }
@@ -3402,18 +3402,18 @@ section.tag-sec:before {
 	font-size:16px;
 	line-height:1.88;
 }
-.tag-content a{
+body .tag-content a{
 	color:#ffffff;
 	display:inline-block;
 	margin:30px 0 0 0;
 	transition:all ease 0.4s;
 }
-.tag-content a:hover, .tag-content a:focus{
+body .tag-content a:hover, .tag-content a:focus{
 	color:#01A2DD;
 	background:#ffffff;
 	border-color:#ffffff;
 }
-.tag-content a:hover i, .tag-content a:focus i{
+body .tag-content a:hover i, .tag-content a:focus i{
 	color:#01A2DD;
 }
 .tag-content a i{
