--- a/public/assets/css/responsiveness.css
+++ b/public/assets/css/responsiveness.css
@@ -7,7 +7,7 @@
  --------------------------------*/
 @media only screen  and (min-width : 768px) {
 	section {
-		padding:70px 0 70px;
+		padding:35px 0 70px;
 	}
 	.form-control.right-br{
 		border-right:1px solid #e4e4e4;
@@ -174,7 +174,7 @@
 	}
 
 	.banner-caption .form-control {
-		height: 70px;
+		height: 50px;
 		color: #90969e;
 		font-size: 15px;
 		line-height: 60px;
@@ -183,12 +183,12 @@
 	height:70px;
 	}
 	.banner-caption .btn.btn-default, .banner-caption .form-control .btn.dropdown-toggle.btn-default, .banner-caption .form-control .btn.dropdown-toggle.btn-default:focus, .banner-caption .form-control .btn.dropdown-toggle.btn-default:hover {
-		height: 70px;
+		height: 50px;
 		width: 100%;
 	}
 	
 	i.banner-icon {
-    top: 24px;
+    top: 10px;
     font-size: 20px;
 	}
 	body a.btn {
@@ -307,6 +307,9 @@
 
 @media screen and (max-width: 767px) {
 	/*-- General Style--*/
+	div#add-reviews {
+		margin-top: 20px;
+	}
 	.footer-widget{
 		padding:1.5em 0;
 	}
