--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -408,6 +408,9 @@ textarea {
     padding-right: 2%;
     color: #0b38f5;
 }
+p#star-color i {
+    color: #fff;
+}
 p.uverall {
     font-size: 16px;
     font-weight: 700;
@@ -416,7 +419,8 @@ p.uverall {
     color: #000;
 }
 .blue-black h4 span {
-    color: #0b38f5;
+    color: #000;
+    /* color: #0b38f5; */
 }
 .form-part h2 {
     color: #0b38f5;
