--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -451,6 +451,7 @@ p.uverall {
     display: none;
 }
 
+
 }
 
 @media (min-width:1200px) { 
@@ -600,6 +601,9 @@ img.logo {
 }
 .form-blue label { 
     font-size: 14px; 
+}
+.btn.btn-all.header-btn.top-header-btn.set {
+    display: none;
 }
 
 }
@@ -779,8 +783,23 @@ a#topjs {
         top: -5%;
         font-size: 20px;
     }
+    
 }
 .subinput {
     width: 70%;
     margin: 0 auto;
 }
+
+                        
+/* p.tip-text {
+    width: 100%;
+    height: 100px;
+    background: black;
+    padding: 20px;
+    text-align: center;
+    font-size: 12px !important;
+}
+span.tool-text {
+    color: #fff;
+} */
+
